# symmetric-polygon

./: CMakeLists.txt  README.md  main.cpp  polygon.cpp  polygon.h
tests/: tests.cpp
